Adds view of last 10 Cowsayings

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,12 @@
     </div>
     <pre>{{ cow }}</pre>
 
-    <div>
+    
+      <div>
+        <a href="/history/">Check out the last 10 Cowsayings!</a>
+      </div>
+    </br>
+      <div>
         <a href="/">Reset</></a>
       </div>
   </body>
